# onoma

./: Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: build.yml  nightly.yml  release-drafter.yml  spellcheck.yml
.sqlx/: query-44a24d2d34ef8f81d054abe7a5d3d841c08985b1a73b0a85b722ee2c75add596.json  query-850ebda470a9499a2f5fa21140e5b81e9413b32f0aa58282e3e772ca86993816.json  query-c130e846356fdfdb1ec2311ed807695187bf1a22322d9a97e828158c68b24b95.json  query-daa586ccb03047fe108347a1f61453ee09329b33ea145e22d09f551bf564884b.json
migrations/: 20251224144900_setup_basic_index.sql
src/: lib.rs  utils.rs
src/indexer/: database_backed_indexer.rs  error.rs  mod.rs  types.rs
src/indexer/snapshots/: onoma__indexer__database_backed_indexer__tests__deindexing_files_in_project.snap  onoma__indexer__database_backed_indexer__tests__indexing_project.snap
src/models/: mod.rs
src/models/parsed/: index.rs  language.rs  mod.rs  symbol.rs  symbol_kind.rs  symbol_occurrence.rs  symbol_range.rs  symbol_role.rs
src/models/resolved/: mod.rs  resolved_symbol.rs  score.rs
src/parser/: error.rs  mod.rs  types.rs
src/parser/treesitter/: mod.rs  model.rs  parser.rs
src/parser/treesitter/scm/: clojure_symbols.scm  golang_symbols.scm  javascript_jsx_symbols.scm  javascript_symbols.scm  lua_symbols.scm  python_symbols.scm  rust_symbols.scm  typescript_jsx_symbols.scm  typescript_symbols.scm
src/parser/treesitter/snapshots/: onoma__parser__treesitter__parser__tests__parsing_clojure.snap  onoma__parser__treesitter__parser__tests__parsing_go.snap  onoma__parser__treesitter__parser__tests__parsing_javascript.snap  onoma__parser__treesitter__parser__tests__parsing_javascript_jsx.snap  onoma__parser__treesitter__parser__tests__parsing_lua.snap  onoma__parser__treesitter__parser__tests__parsing_python.snap  onoma__parser__treesitter__parser__tests__parsing_rust.snap  onoma__parser__treesitter__parser__tests__parsing_typescript.snap  onoma__parser__treesitter__parser__tests__parsing_typescript_tsx.snap
src/resolver/: constant.rs  database_backed_resolver.rs  mod.rs  scoring.rs  types.rs  utils.rs  weight.rs
src/resolver/snapshots/: onoma__resolver__database_backed_resolver__tests__resolving_symbols_of_specific_type.snap  onoma__resolver__database_backed_resolver__tests__resolving_symbols_of_specific_type_by_language.snap  onoma__resolver__database_backed_resolver__tests__resolving_symbols_with_query.snap
src/watcher/: constant.rs  error.rs  mod.rs  types.rs
tests/fixtures/: clojure.clj  go.go  javascript.js  javascript.jsx  lua.lua  python.py  rust.rs  typescript.ts  typescript.tsx
